--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<app-root></app-root>
+  <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHhohUKGbeljpZbz-U1OWUo-uLf_AyFmk" 
+    type="text/javascript"></script>
 </body>
 </html>
