--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,5 +11,10 @@
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHhohUKGbeljpZbz-U1OWUo-uLf_AyFmk" 
     type="text/javascript"></script>
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
 </body>
 </html>
